importing assets to get started

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <body style="margin: 0; overflow: hidden;">
         <a-scene>
             
+            <!-- Here is where we hold all the assets to be loaded into the a-scene -->
+            <a-scene-assetes>
+                <!-- We also hold any images that we want to use as a texture here too, we hold them in <img> tags -->
+
+            </a-scene-assetes>
+
+            <a-marker preset="kanji">
+                
+            </a-marker>
+
         </a-scene>
     </body>
 </html>
