Starting to deck out my desk

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           src="./js/chappie-scene.gltf"></a-asset-items>
       </a-assets>
 
-      <!-- <a-marker type="pattern" url="">
+      <!-- <a-marker type="pattern" url="https://raw.githubusercontent.com/tsharliz-Joma/WorkDesk/main/patterns/pattern-chep.patt">
                 <a-box id="chep-cube" position='0 2 0' animation="property: rotation; to: 0 360 0; dur: 4000; easing: linear; loop: true" material='color: #fff;'  multisrc="srcs:#logo,#logo,#logo,#logo,#logo,#logo" ></a-box>
             </a-marker> -->
 
